--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 
       </header>
 
-      <main class="container-fluid bg-secondary">
-        <div class="row">
-            <div class="col-6">
+      <main class="container-fluid">
+        <div class="row bg-secondary">
+            <div class="col-6 mt-5">
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <h4>Lorem, ipsum dolor.</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro temporibus laboriosam modi! Voluptatum eos autem, aut, dolorem nisi sint qui dignissimos sapiente accusamus esse debitis, nihil ut nam! Error, quidem!</p>
 
             </div>
-            <div class="col-6 p-4">
+            <div class="col-6 p-4 mt-5">
                 <div class="bg-danger p-3">
                 <div>
                     <i class="mdi mdi-camera text-light p-1"></i>
@@ -100,6 +100,27 @@
             </div>
 
         </div>
+        <section class="row">
+          <div class="col-6 ">
+            <div class="m-5 about-me-img">
+
+            </div>
+
+          </div>
+          <div class="col-6 p-5">
+            <div>
+              <h3>
+              <i class="mdi mdi-camera p-3"></i>About Me
+              </h3>
+              <h5><i>Lorem ipsum dolor sit.</i></h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, nulla nam. Enim expedita laboriosam porro voluptas esse quaerat ea vitae. Eum natus eos, cumque amet non officia facilis dolor dolore! Quasi voluptatibus iste illo repellat quibusdam asperiores dolor, alias ullam!</p>
+              <button type="button" class="btn btn-primary">Pet the cat</button>
+
+            </div>
+
+          </div>
+
+        </section>
 
       </main>
 
