more progress + mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <div class="row bg-warning hero-img align-items-center">
-            <div class="col-5 h-75">Subtle Heading
+            <div class="col-12 col-md-5 px-5 h-75">Subtle Heading
                 <form class="bg-secondary">
                     <div class="form-group p-2">
                       <label class="p-1">Less Subtle Heading</label>
@@ -61,7 +61,7 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </div>
-            <div class="col-6 offset-1">
+            <div class="d-none d-md-block col-6 offset-1">
                 <h2>TEXT OVER IMAGE</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum totam velit excepturi sequi cum animi ut voluptas sapiente id non.</p>
             </div>
@@ -72,28 +72,28 @@
 
       <main class="container-fluid">
         <div class="row bg-secondary">
-            <div class="col-6 mt-5">
+            <div class="col-md-6 col-12 order-md-1 order-2 mt-5">
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <h4>Lorem, ipsum dolor.</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro temporibus laboriosam modi! Voluptatum eos autem, aut, dolorem nisi sint qui dignissimos sapiente accusamus esse debitis, nihil ut nam! Error, quidem!</p>
 
             </div>
-            <div class="col-6 p-4 mt-5">
+            <div class="col-md-6 col-12 order-md-2 p-4 mt-5 mb-5">
                 <div class="bg-danger p-3">
                 <div>
-                    <i class="mdi mdi-camera text-light p-1"></i>
+                  <p class="bg-warning mr-100"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
                 </div>
                 <div>
-                    <i class="mdi mdi-camera text-light p-1"></i>
+                  <p class="bg-warning mr-150"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
                 </div>
                 <div>
-                    <i class="mdi mdi-camera text-light p-1"></i>
+                  <p class="bg-warning mr-200"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
                 </div>
                 <div>
-                    <i class="mdi mdi-camera text-light p-1"></i>
+                  <p class="bg-warning mr-100"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
                 </div>
-                <div>
-                    <i class="mdi mdi-camera text-light p-1"></i>
+                <div class="">
+                    <p class="bg-warning mr-150"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
                 </div>
             </div>
                 
@@ -101,30 +101,64 @@
 
         </div>
         <section class="row">
-          <div class="col-6 ">
+          <div class="col-12 col-md-6 ">
             <div class="m-5 about-me-img">
 
             </div>
 
           </div>
-          <div class="col-6 p-5">
+          <div class="col-12 col-md-6 p-5">
             <div>
               <h3>
               <i class="mdi mdi-camera p-3"></i>About Me
               </h3>
               <h5><i>Lorem ipsum dolor sit.</i></h5>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, nulla nam. Enim expedita laboriosam porro voluptas esse quaerat ea vitae. Eum natus eos, cumque amet non officia facilis dolor dolore! Quasi voluptatibus iste illo repellat quibusdam asperiores dolor, alias ullam!</p>
-              <button type="button" class="btn btn-primary">Pet the cat</button>
+              <button type="button" class="btn btn-primary ">Pet the cat</button>
 
             </div>
 
           </div>
 
         </section>
+        <section class="row grow40 secondary-color pt-3 pb-3 align-items-center">
+          <div class="col-12 col-md-4 order-md-1 order-3">
+            <div class="review-card bg-danger h-75 w-100 text-center">
+              <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
+
+            </div>
+          </div>
+          <div class="col-12 col-md-4 order-1 order-md-2 p-4">
+            <div class="review-card bg-warning h-100 w-100 text-center">
+              <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
+            </div>
+
+          </div>
+          <div class="col-12 col-md-4 order-md-3 order-2">
+            <div class="review-card bg-danger h-75 w-100">
+              <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
+            </div>
+          </div>
+        </section>
+        <div class="row grow20">
+          <div class="col-12 bg-secondary">
+            <div class="pt-5 px-5 text-light">
+              <h2>Thanks For Visiting!</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nesciunt architecto tenetur, soluta quis consequatur?</p>
+            </div>
+
+          </div>
+        </div>
 
       </main>
 
       <footer class="container-fluid">
+        <div class="row grow10 align-items-center">
+          <div class="col-12 ">
+            <p class="text-center pt-3">This site was made by Tyler Truman.</p>
+          </div>
+
+        </div>
 
       </footer>
 
@@ -132,3 +166,7 @@
 
   </body>
 </html>
+
+<!-- NOTE 1. Can't figure out how to center my buttons
+          2. Can't figure out how to make my image match size and orientation of clone.
+           -->
