--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <title>Checkpoint 1</title>
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400;600;700&display=swap" rel="stylesheet">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,17 +38,17 @@
   </head>
   <body class="debug">
       <header class="container-fluid">
-        <nav class="row bg-secondary">
+        <nav class="row dark-gray sticky-top">
             <div class="col-6 text-left text-light pb-2">
                 <h3 class="pt-3 px-3"><i class="mdi mdi-camera text-light"></i>
-                LOREM IPSUM</h3>
+                Boise Based Photography</h3>
             </div>
         </nav>
         <div class="row bg-warning hero-img align-items-center">
-            <div class="col-12 col-md-5 px-5 h-75">Subtle Heading
-                <form class="bg-secondary">
+            <div class="col-12 col-md-5 px-5 h-75">Need Photos?
+                <form class="contact-form rounded">
                     <div class="form-group p-2">
-                      <label class="p-1">Less Subtle Heading</label>
+                      <label class="p-1 text-light">Contact Me</label>
                       <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="NAME">
                     </div>
                     <div class="form-group p-2">
@@ -56,14 +62,14 @@
                       </div>
                     <div class="form-check m-2">
                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check this box if you don't want email advertisements sent to your inbox!</label>
+                      <label class="form-check-label text-light" for="exampleCheck1">Check this box if you want updates on my work!</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary m-2">Submit</button>
                   </form>
             </div>
-            <div class="d-none d-md-block col-6 offset-1">
-                <h2>TEXT OVER IMAGE</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum totam velit excepturi sequi cum animi ut voluptas sapiente id non.</p>
+            <div class="d-none d-md-block col-6 offset-1 text-light text-shadow">
+                <h2>Hello There</h2>
+                <p>I am a photographer based in Boise, Idaho.</p>
             </div>
         </div>
 
@@ -71,36 +77,36 @@
       </header>
 
       <main class="container-fluid">
-        <div class="row bg-secondary">
-            <div class="col-md-6 col-12 order-md-1 order-2 mt-5">
-                <h4>Lorem ipsum dolor sit amet.</h4>
-                <h4>Lorem, ipsum dolor.</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro temporibus laboriosam modi! Voluptatum eos autem, aut, dolorem nisi sint qui dignissimos sapiente accusamus esse debitis, nihil ut nam! Error, quidem!</p>
+        <div class="row dark-gray align-items-center p-5">
+            <div class="col-md-6 col-12 order-md-1 order-2  text-light pt-3">
+                <h4>Skills:</h4>
+                <h4>I have many talents.</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium autem aut debitis labore, necessitatibus sequi velit illo architecto, fugit sit temporibus. Vitae ea quia quos.</p>
 
             </div>
-            <div class="col-md-6 col-12 order-md-2 p-4 mt-5 mb-5">
-                <div class="bg-danger p-3">
+            <div class="col-md-6 col-12 order-md-2  skills-card">
+                <div class="light-gray p-3 ">
                 <div>
-                  <p class="bg-warning mr-100"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
+                  <p class="dark-gray mr-100"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="bg-warning mr-150"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
+                  <p class="dark-gray mr-150"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="bg-warning mr-200"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
+                  <p class="dark-gray mr-200"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="bg-warning mr-100"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
+                  <p class="dark-gray mr-100"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div class="">
-                    <p class="bg-warning mr-150"><i class="bg-danger mdi mdi-camera text-light p-1"></i></p>
+                    <p class="dark-gray mr-150"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
             </div>
                 
             </div>
 
         </div>
-        <section class="row">
+        <section class="row light-gray">
           <div class="col-12 col-md-6 ">
             <div class="m-5 about-me-img">
 
@@ -114,35 +120,35 @@
               </h3>
               <h5><i>Lorem ipsum dolor sit.</i></h5>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, nulla nam. Enim expedita laboriosam porro voluptas esse quaerat ea vitae. Eum natus eos, cumque amet non officia facilis dolor dolore! Quasi voluptatibus iste illo repellat quibusdam asperiores dolor, alias ullam!</p>
-              <button type="button" class="btn btn-primary ">Pet the cat</button>
+              <button type="button" class="btn btn-primary ">Button</button>
 
             </div>
 
           </div>
 
         </section>
-        <section class="row grow40 secondary-color pt-3 pb-3 align-items-center">
+        <section class="row grow40 dark-gray pt-3 pb-3 align-items-center">
           <div class="col-12 col-md-4 order-md-1 order-3">
-            <div class="review-card bg-danger h-75 w-100 text-center">
+            <div class="review-card light-gray h-75 w-100 text-center">
               <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
 
             </div>
           </div>
-          <div class="col-12 col-md-4 order-1 order-md-2 p-4">
-            <div class="review-card bg-warning h-100 w-100 text-center">
-              <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
+          <div class="col-12 col-md-4 order-1 order-md-2 pt-3 pb-3">
+            <div class="review-card light-gray h-100 w-100 text-center p-4">
+              <p class="p-4"><i class="mdi mdi-star p-1"></i><i class="mdi mdi-star p-1"></i><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum itaque delectus, aperiam enim quaerat!</p>
             </div>
 
           </div>
           <div class="col-12 col-md-4 order-md-3 order-2">
-            <div class="review-card bg-danger h-75 w-100">
+            <div class="review-card light-gray h-75 w-100">
               <p class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aspernatur culpa quod commodi necessitatibus obcaecati sapiente qui in fugiat sed! Accusamus provident aut officia! Ab, temporibus! Aperiam labore sed dolorem!</p>
             </div>
           </div>
         </section>
         <div class="row grow20">
-          <div class="col-12 bg-secondary">
-            <div class="pt-5 px-5 text-light">
+          <div class="col-12 light-gray">
+            <div class="pt-5 px-5 text-dark">
               <h2>Thanks For Visiting!</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nesciunt architecto tenetur, soluta quis consequatur?</p>
             </div>
@@ -153,9 +159,9 @@
       </main>
 
       <footer class="container-fluid">
-        <div class="row grow10 align-items-center">
+        <div class="row grow10 align-items-center dark-gray">
           <div class="col-12 ">
-            <p class="text-center pt-3">This site was made by Tyler Truman.</p>
+            <p class="text-center pt-3 text-light">This site was made by Tyler Truman.</p>
           </div>
 
         </div>
