skills card complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- MDI Link-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
     <!-- style.debug -->
-    <style>
+    <!-- <style>
       body.debug .container,
       body.debug .container-fluid {
         outline: 2px double blue;
@@ -33,7 +33,7 @@
       body.debug [class*="col-"] {
         outline: 2px dotted forestgreen;
         outline-offset: -3px;
-      }
+      } -->
     </style>
   </head>
   <body class="debug">
@@ -84,8 +84,8 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium autem aut debitis labore, necessitatibus sequi velit illo architecto, fugit sit temporibus. Vitae ea quia quos.</p>
 
             </div>
-            <div class="col-md-6 col-12 order-md-2  skills-card">
-                <div class="light-gray p-3 ">
+            <div class="col-md-6 col-12 order-md-2 skills-card rounded med-gray">
+                <div class="med-gray p-3 ">
                 <div>
                   <p class="dark-gray mr-100"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
