--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
             <div class="col-md-6 col-12 order-md-2 skills-card rounded med-gray">
                 <div class="med-gray p-3 ">
                 <div>
-                  <p class="dark-gray mr-100"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
+                  <p class="dark-gray mr-100"><i class="med-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="dark-gray mr-150"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
+                  <p class="dark-gray mr-150"><i class="med-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="dark-gray mr-200"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
+                  <p class="dark-gray mr-200"><i class="med-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div>
-                  <p class="dark-gray mr-100"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
+                  <p class="dark-gray mr-100"><i class="med-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
                 <div class="">
-                    <p class="dark-gray mr-150"><i class="light-gray mdi mdi-camera text-dark p-1"></i></p>
+                    <p class="dark-gray mr-150"><i class="med-gray mdi mdi-camera text-dark p-1"></i></p>
                 </div>
             </div>
                 
