--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
                       <label class="form-check-label text-light" for="exampleCheck1">Check this box if you want updates on my work!</label>
                     </div>
+                    <div class="text-center">
                     <button type="submit" class="btn btn-primary m-2">Submit</button>
+                  </div>
                   </form>
             </div>
             <div class="d-none d-md-block col-6 offset-1 text-light text-shadow">
@@ -120,7 +122,9 @@
               </h3>
               <h5><i>Lorem ipsum dolor sit.</i></h5>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, nulla nam. Enim expedita laboriosam porro voluptas esse quaerat ea vitae. Eum natus eos, cumque amet non officia facilis dolor dolore! Quasi voluptatibus iste illo repellat quibusdam asperiores dolor, alias ullam!</p>
+              <div class="text-center">
               <button type="button" class="btn btn-primary ">Button</button>
+            </div>
 
             </div>
 
@@ -173,6 +177,4 @@
   </body>
 </html>
 
-<!-- NOTE 1. Can't figure out how to center my buttons
-          2. Can't figure out how to make my image match size and orientation of clone.
-           -->
+<!-- NOTE 1. Can't figure out how to center my buttons !--> 
